word-level chatbot model

--- a/chatbot_web/templates/cornell_char_reply.html
+++ b/chatbot_web/templates/cornell_char_reply.html
@@ -2,7 +2,10 @@
 {% block body %}
     <p>Write something here then we will use the CNN for sentiment analysis</p>
     <form method=post>
-      <p>Write something here: <input type=text name=sentence></p>
-         <input type=submit value=Evaluate>
+        <textarea rows="20">
+            <% for
+        </textarea>
+      <p>Message: <input type=text name=sentence></p>
+         <input type=submit value=Send>
     </form>
 {% endblock %}
