working gunthercox models

--- a/chatbot_web/templates/gunthercox_word_reply.html
+++ b/chatbot_web/templates/gunthercox_word_reply.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% block body %}
-    <p>Write your message here: (Cornell Dialogs)</p>
+    <p>Write your message here: (Gunthercox Corpus Word-Level)</p>
     <form method=post>
         <textarea rows="20">
             <% for line in conversations %>
