--- a/chatbot_web/templates/layout.html
+++ b/chatbot_web/templates/layout.html
@@ -1,8 +1,8 @@
 <!doctype html>
-<title>Flask Slingshot</title>
+<title>Seq2Seq Chat Bot</title>
 <link rel=stylesheet type=text/css href="{{ url_for('static', filename='style.css') }}">
 <div class=page>
-  <h1><a href="/">Sentiment Analysis</a></h1>
+  <h1><a href="/">Seq2Seq Chat Bot</a></h1>
   <div class=metanav>
   <a href="{{ url_for('about') }}">About</a>
   </div>
