--- a/chatbot_web/templates/home.html
+++ b/chatbot_web/templates/home.html
@@ -1,7 +1,8 @@
 {% extends "layout.html" %}
 {% block body %}
   <ul class=entries>
-    <li><a href="{{ url_for('gunthercox_char_reply') }}">Gunthercox Chat Bot</a></li>
+    <li><a href="{{ url_for('gunthercox_word_reply') }}">Gunthercox Chat Bot (Word-Level)</a></li>
+    <li><a href="{{ url_for('gunthercox_char_reply') }}">Gunthercox Chat Bot (Char-Level)</a></li>
     <li><a href="{{ url_for('cornell_char_reply') }}">Cornell Chat Bot</a></li>
   </ul>
 {% endblock %}
