Update cornell bot api

--- a/chatbot_web/templates/home.html
+++ b/chatbot_web/templates/home.html
@@ -3,6 +3,7 @@
   <ul class=entries>
     <li><a href="{{ url_for('gunthercox_word_reply') }}">Gunthercox Chat Bot (Word-Level)</a></li>
     <li><a href="{{ url_for('gunthercox_char_reply') }}">Gunthercox Chat Bot (Char-Level)</a></li>
-    <li><a href="{{ url_for('cornell_char_reply') }}">Cornell Chat Bot</a></li>
+    <li><a href="{{ url_for('cornell_word_reply') }}">Cornell Chat Bot (Word-Level)</a></li>
+    <li><a href="{{ url_for('cornell_char_reply') }}">Cornell Chat Bot (Char-Level)</a></li>
   </ul>
 {% endblock %}
