--- a/chatbot_web/templates/cornell_word_reply.html
+++ b/chatbot_web/templates/cornell_word_reply.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% block body %}
-    <p>Write your message here: (Cornell Dialogs Character-Level)</p>
+    <p>Write your message here: (Cornell Dialogs Word-Level)</p>
     <form method=post>
         <ul>
             {% for line in conversations %}
