--- a/chatbot_web/templates/home.html
+++ b/chatbot_web/templates/home.html
@@ -4,7 +4,8 @@
     <li><a href="{{ url_for('gunthercox_word_reply') }}">Gunthercox Chat Bot (Word-Level One-Hot Encoding)</a></li>
     <li><a href="{{ url_for('gunthercox_word_glove_reply') }}">Gunthercox Chat Bot (Word-Level Glove Encoding)</a></li>
     <li><a href="{{ url_for('gunthercox_char_reply') }}">Gunthercox Chat Bot (Char-Level)</a></li>
-    <li><a href="{{ url_for('cornell_word_reply') }}">Cornell Chat Bot (Word-Level)</a></li>
+    <li><a href="{{ url_for('cornell_word_reply') }}">Cornell Chat Bot (Word-Level One-Hot Encoding)</a></li>
+    <li><a href="{{ url_for('cornell_word_glove_reply') }}">Cornell Chat Bot (Word-Level GloVe Encoding)</a></li>
     <li><a href="{{ url_for('cornell_char_reply') }}">Cornell Chat Bot (Char-Level)</a></li>
   </ul>
 {% endblock %}
